# OpenPersonality

./: .gitignore  LXD_create_VMs.sh  README.md  cli_interface.py  local_models_benchmark_as_sysadmin.md  main.py  notes.md  personality_engine.py  pyproject.toml
.github/: dependabot.yml
AGENTS_context_generation_testing_files/: OSAgent_chatgpt.md  OSAgent_claude.md  OSAgent_gemini.md  OSAgent_grok.md  OSAgent_mistral.md  OSAgent_perplexity.md  OSAgent_x.md
OSAgent-chatgpt/: README.md  main.py  project_manifest.md  pyproject.toml
OSAgent-claude/: AGENTS.md  ARCHITECTURE.md  COMPACT.txt  GLOSSARY.md  OVERVIEW.md  README.md  SECURITY_ENHANCEMENTS_SUMMARY.md  main.py  mcp_self_healing_server.py  project_manifest.md  pyproject.toml  requirements.txt
OSAgent-claude/modules/: context_manager.md  logging_system.md  main_orchestrator.md  mcp_server.md  terminal_tool.md
OSAgent-gemini/: README.md  main.py  pyproject.toml
OSAgent-grok/: README.md  architecture.md  context_meaning.md  main.py  mcp_self_healing_server.py  progressive_disclosure.md  pyproject.toml  requirements.txt  token_saver.md
OSAgent-mistral/: README.md  main.py  pyproject.toml  requirements.txt
OSAgent-mistral/docs/: AGENT_CHEAT_SHEET.md  ARCHITECTURE.md  CONTEXT.md  PROGRESSIVE_DISCLOSURE.md
OSAgent-mistral/docs/SUMMARIES/: main.py.md  mcp_self_healing_server.py.md
OSAgent-perplexity/: AGENT_GUIDE.md  ARCHITECTURE.md  CHANGELOG_CONTEXT.md  CONTEXT.md  README.md  TOKEN_SAVER.json  main.py  pyproject.toml  requirements.txt
OSAgent-perplexity/PROGRESSIVE_DISCLOSURE/: 01-overview.md  02-core.md  03-data.md  04-api.md  05-utils.md  README.md
OSAgent-x/: ARCHITECTURE.md  CONTEXT_MAP.md  ENTRY_POINTS.md  FILE_SUMMARIES.md  PROGRESSIVE_DISCLOSURE_GUIDE.md  README.md  main.py  main.py.backup  pyproject.toml  requirements.txt
OSAgent-x/LLM_CONTEXT/SKILLS/: agent-domain.md
config/: HEARTBEAT.md
context/: bash_pro.md  linux_admin.md  security_hardening.md
context_calculator/: personality_engine.py
context_files/: AGENT.md  IDENTITY.md
research/: README.md
research/context_calculator/: cli_interface.py  main.py  personality_engine.py
research/context_files/skills/: coder.md  finance.md
research/context_templates/: AGENT.md  HEARTBEAT.md  IDENTITY.md  PLAN.md  SKILL.md  SOUL.md  TOOLS.md
research/context_templates/openclaw/agents/: README.md  spawn_agent.sh
research/context_templates/openclaw/agents/Assembly/: IDENTITY.md  SOUL.md  TOOLS.md  USER.md
research/context_templates/openclaw/agents/Bitcoin/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
research/context_templates/openclaw/agents/C/: IDENTITY.md  SOUL.md  TOOLS.md
research/context_templates/openclaw/agents/Cplusplus/: IDENTITY.md  SOUL.md  TOOLS.md
research/context_templates/openclaw/agents/Go/: SOUL.md  (+2 more)
research/knowledge_base/: debug_bot.md  finance_pro.md
research/sandbox/: os_gateway_gemini.py  os_gateway_grok.py  os_gateway_grokx.py  os_gateway_groq.py  os_gateway_original.py
research/sandbox/OpenClow/: context_engine.py
research/sandbox/claude/: context_analyzer.py  os_gateway.py  test_progressive_context.py
(+34 files in other folders)
