[project]
name = "OSAgent"
version = "0.1.0"
description = "A standalone AI-powered Ubuntu 24.04 LTS system administration agent that operates in Interactive, Single Shot, and Loop/Agentic modes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "idna==3.11",
    "pyyaml==6.0.3",
    "requests==2.33.0",
    "urllib3==2.6.3"
]

[dependency-groups]
dev = []

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
