[project]
name = "OSAgent"
version = "0.1.0"
description = "A self-contained Python application for Linux system administration assistance"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.7",
    "colorama>=0.4.6",
    "idna>=3.11",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "urllib3>=2.6.3"
]
