[project]
name = "OSAgent"
version = "0.1.0"
description = "An autonomous agent for Ubuntu 24.04 LTS system administration with risk-averse philosophy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.4.22",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "idna==3.11",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "urllib3==2.6.3",
]
